src/objects/LI_Opportunity__x.object
<CustomObject>
    <fields>
        <fullName>EmailSent_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>EmailSent__c</externalDeveloperName>
        <label>EmailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enterprise_Lead_c__c</fullName>
        <externalDeveloperName>Enterprise_Lead__c</externalDeveloperName>
        <label>Enterprise Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_USD_Value_c__c</fullName>
        <externalDeveloperName>Estimated_USD_Value__c</externalDeveloperName>
        <label>Estimated USD Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EverGreen_Contract_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>EverGreen_Contract__c</externalDeveloperName>
        <label>EverGreen Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Bid_Team_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Exclude_From_Bid_Team__c</externalDeveloperName>
        <label>Incl in Large Deal Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Pricing_Calculator_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Exclude_From_Pricing_Calculator__c</externalDeveloperName>
        <label>Exclude From Pricing Assistant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue_c__c</fullName>
        <externalDeveloperName>ExpectedRevenue__c</externalDeveloperName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Legal_Review_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Final_Legal_Review__c</externalDeveloperName>
        <label>MEA Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Price_Approval_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Final_Price_Approval__c</externalDeveloperName>
        <label>EBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FiscalQuarter__c</fullName>
        <externalDeveloperName>FiscalQuarter</externalDeveloperName>
        <label>Fiscal Quarter</label>
        <precision>8</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <externalDeveloperName>FiscalYear</externalDeveloperName>
        <label>Fiscal Year</label>
        <precision>8</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal__c</fullName>
        <externalDeveloperName>Fiscal</externalDeveloperName>
        <label>Fiscal Period</label>
        <length>6</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastCategoryName__c</fullName>
        <externalDeveloperName>ForecastCategoryName</externalDeveloperName>
        <label>Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>On Track &amp; Best Case</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ForecastCategory__c</fullName>
        <externalDeveloperName>ForecastCategory</externalDeveloperName>
        <label>Forecast Category</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>BestCase</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Opportunity_c__c</fullName>
        <externalDeveloperName>From_Opportunity__c</externalDeveloperName>
        <label>From Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullYearAmount_c__c</fullName>
        <externalDeveloperName>FullYearAmount__c</externalDeveloperName>
        <label>Full Year</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GQI_Check_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>GQI_Check__c</externalDeveloperName>
        <label>GQI Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Offerings_Contract_Value_c__c</fullName>
        <externalDeveloperName>Global_Offerings_Contract_Value__c</externalDeveloperName>
        <label>Global Offerings Contract Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Global_Services_Contract_Value_c__c</fullName>
        <externalDeveloperName>Global_Services_Contract_Value__c</externalDeveloperName>
        <label>Global Services Contract Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Q1_NY_Value_c__c</fullName>
        <externalDeveloperName>Gross_Q1_NY_Value__c</externalDeveloperName>
        <label>Gross Q1 NY Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Q1_Value_c__c</fullName>
        <externalDeveloperName>Gross_Q1_Value__c</externalDeveloperName>
        <label>Gross Q1 Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Q2_NY_Value_c__c</fullName>
        <externalDeveloperName>Gross_Q2_NY_Value__c</externalDeveloperName>
        <label>Gross Q2 NY Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Q2_Value_c__c</fullName>
        <externalDeveloperName>Gross_Q2_Value__c</externalDeveloperName>
        <label>Gross Q2 Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Q3_Value_c__c</fullName>
        <externalDeveloperName>Gross_Q3_Value__c</externalDeveloperName>
        <label>Gross Q3 Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Quarterly_Impact_c__c</fullName>
        <externalDeveloperName>Gross_Quarterly_Impact__c</externalDeveloperName>
        <label>Gross Quarterly Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Quarterly_Value_c__c</fullName>
        <externalDeveloperName>Gross_Quarterly_Value__c</externalDeveloperName>
        <label>Gross Quarterly Impact</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Quarterly_in_USD_c__c</fullName>
        <externalDeveloperName>Gross_Quarterly_in_USD__c</externalDeveloperName>
        <label>Gross Quarterly in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVS_Contract_Value_c__c</fullName>
        <externalDeveloperName>HVS_Contract_Value__c</externalDeveloperName>
        <label>RWI Contract Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HasOpenActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOpenActivity</externalDeveloperName>
        <label>Has Open Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOpportunityLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOpportunityLineItem</externalDeveloperName>
        <label>Has Line Item</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOverdueTask__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOverdueTask</externalDeveloperName>
        <label>Has Overdue Task</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMS_Budget_Holder_Email_c__c</fullName>
        <externalDeveloperName>IMS_Budget_Holder_Email__c</externalDeveloperName>
        <label>IMS Budget Holder Email</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMS_Budget_Holder_Name_c__c</fullName>
        <externalDeveloperName>IMS_Budget_Holder_Name__c</externalDeveloperName>
        <label>IMS Budget Holder Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMS_Budget_Holder_Phone_c__c</fullName>
        <externalDeveloperName>IMS_Budget_Holder_Phone__c</externalDeveloperName>
        <label>IMS Budget Holder Phone</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMS_Forecast_Category_c__c</fullName>
        <externalDeveloperName>IMS_Forecast_Category__c</externalDeveloperName>
        <label>IMS Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Omitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMS_Main_Decision_Maker_Email_c__c</fullName>
        <externalDeveloperName>IMS_Main_Decision_Maker_Email__c</externalDeveloperName>
        <label>IMS Main Decision Maker Email</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMS_Main_Decision_Maker_Name_c__c</fullName>
        <externalDeveloperName>IMS_Main_Decision_Maker_Name__c</externalDeveloperName>
        <label>IMS Main Decision Maker Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMS_Main_Decision_Maker_Phone_c__c</fullName>
        <externalDeveloperName>IMS_Main_Decision_Maker_Phone__c</externalDeveloperName>
        <label>IMS Main Decision Maker Phone</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMS_Opportunity_Currency_c__c</fullName>
        <externalDeveloperName>IMS_Opportunity_Currency__c</externalDeveloperName>
        <label>IMS Opportunity Currency</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMS_Opportunity_Owner_c__c</fullName>
        <externalDeveloperName>IMS_Opportunity_Owner__c</externalDeveloperName>
        <label>IMS Opportunity Owner</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMS_Parent_Opportunity_Number_c__c</fullName>
        <externalDeveloperName>IMS_Parent_Opportunity_Number__c</externalDeveloperName>
        <label>IMS Parent Opportunity Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Parent_Opportunity_c__c</fullName>
        <externalDeveloperName>IMS_Parent_Opportunity__c</externalDeveloperName>
        <label>IMS Parent Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Region_c__c</fullName>
        <externalDeveloperName>IMS_Region__c</externalDeveloperName>
        <label>IMS Region</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ignore_For_Statistics_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Ignore_For_Statistics__c</externalDeveloperName>
        <label>Ignore For Statistics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_3rd_Party_Content_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Includes_3rd_Party_Content__c</externalDeveloperName>
        <label>Includes 3rd Party Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Information_Contract_Value_c__c</fullName>
        <externalDeveloperName>Information_Contract_Value__c</externalDeveloperName>
        <label>Information Contract Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Information_Management_Contract_Value_c__c</fullName>
        <externalDeveloperName>Information_Management_Contract_Value__c</externalDeveloperName>
        <label>Tech Solution Contract Value[deprecated]</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InsertMilestoneTasks_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>InsertMilestoneTasks__c</externalDeveloperName>
        <label>Mile Stone ToDo Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsClosed</externalDeveloperName>
        <label>Closed</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWon__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsWon</externalDeveloperName>
        <label>Won</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Central_Billing_Engagement_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Central_Billing_Engagement__c</externalDeveloperName>
        <label>Central Billing Engagement (IMS AG only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Deferred_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Deferred__c</externalDeveloperName>
        <label>Is Deferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Survey_Eligible_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Survey_Eligible__c</externalDeveloperName>
        <label>Is Survey Eligible</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Japan_Action_Plan_c__c</fullName>
        <externalDeveloperName>Japan_Action_Plan__c</externalDeveloperName>
        <label>Action Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Japan_Focus_Deal_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Japan_Focus_Deal__c</externalDeveloperName>
        <label>Focus Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Japan_Global_Project_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Japan_Global_Project__c</externalDeveloperName>
        <label>Global Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Japan_Key_Action_c__c</fullName>
        <externalDeveloperName>Japan_Key_Action__c</externalDeveloperName>
        <label>Key Action</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JoshiForecastIsChanged_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>JoshiForecastIsChanged__c</externalDeveloperName>
        <label>IN-Forecast Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joushi_Forecast_C_c__c</fullName>
        <externalDeveloperName>Joushi_Forecast_C__c</externalDeveloperName>
        <label>Manager Forecast</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01. Budget</fullName>
                </value>
                <value>
                    <fullName>02. Closed</fullName>
                </value>
                <value>
                    <fullName>03. Commit</fullName>
                </value>
                <value>
                    <fullName>04. Best Case</fullName>
                </value>
                <value>
                    <fullName>05. Pipeline</fullName>
                </value>
                <value>
                    <fullName>Omitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Deal_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Key_Deal__c</externalDeveloperName>
        <label>Key Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Stage_Change_Date_c__c</fullName>
        <externalDeveloperName>Last_Stage_Change_Date__c</externalDeveloperName>
        <label>Last Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <externalDeveloperName>LeadSource</externalDeveloperName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Planning</fullName>
                </value>
                <value>
                    <fullName>Client Enquiry</fullName>
                </value>
                <value>
                    <fullName>Client Exp Survey</fullName>
                </value>
                <value>
                    <fullName>Client referral</fullName>
                </value>
                <value>
                    <fullName>Client Services</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Extension to Prior Opportunity</fullName>
                </value>
                <value>
                    <fullName>Formal RFP</fullName>
                </value>
                <value>
                    <fullName>Highpoint</fullName>
                </value>
                <value>
                    <fullName>Marketing Activity</fullName>
                </value>
                <value>
                    <fullName>Merger</fullName>
                </value>
                <value>
                    <fullName>Others-Specify</fullName>
                </value>
                <value>
                    <fullName>Pilgrim</fullName>
                </value>
                <value>
                    <fullName>Polaris</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Quintiles</fullName>
                </value>
                <value>
                    <fullName>Sales Presentation</fullName>
                </value>
                <value>
                    <fullName>Thought Leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Generator_c__c</fullName>
        <externalDeveloperName>Lead_Generator__c</externalDeveloperName>
        <label>Lead Generator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_LastModifiedDate_c__c</fullName>
        <externalDeveloperName>Legacy_LastModifiedDate__c</externalDeveloperName>
        <label>Legacy LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Opportunity_Id_c__c</fullName>
        <externalDeveloperName>Legacy_Opportunity_Id__c</externalDeveloperName>
        <label>Legacy Opportunity Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Not_Pursued_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Lost_Not_Pursued__c</externalDeveloperName>
        <label>Lost Not Pursued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC_Contract_Value_c__c</fullName>
        <externalDeveloperName>MC_Contract_Value__c</externalDeveloperName>
        <label>MC Contract Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MC_OLI_Present_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>MC_OLI_Present__c</externalDeveloperName>
        <label>MC OLI Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDM_Functional_Area_c__c</fullName>
        <externalDeveloperName>MDM_Functional_Area__c</externalDeveloperName>
        <label>Main Decision Maker&apos;s Functional Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Job_Level_c__c</fullName>
        <externalDeveloperName>MDM_Job_Level__c</externalDeveloperName>
        <label>Main Decision Maker&apos;s Job Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Job_Role_c__c</fullName>
        <externalDeveloperName>MDM_Job_Role__c</externalDeveloperName>
        <label>Main Decision Maker&apos;s Job Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Job_Title_c__c</fullName>
        <externalDeveloperName>MDM_Job_Title__c</externalDeveloperName>
        <label>Main Decision Maker&apos;s Job Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Scope_of_Role_c__c</fullName>
        <externalDeveloperName>MDM_Scope_of_Role__c</externalDeveloperName>
        <label>Main Decision Maker&apos;s Scope of Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMS_Contract_Value_c__c</fullName>
        <externalDeveloperName>MMS_Contract_Value__c</externalDeveloperName>
        <label>Managed Markets Contract Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Main_Decision_Maker_c__c</fullName>
        <externalDeveloperName>Main_Decision_Maker__c</externalDeveloperName>
        <label>Main Decision Maker</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negative_Condition_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Negative_Condition__c</externalDeveloperName>
        <label>Negative Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Q1_NY_Value_c__c</fullName>
        <externalDeveloperName>Net_Q1_NY_Value__c</externalDeveloperName>
        <label>Net Q1 NY Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Q1_Value_c__c</fullName>
        <externalDeveloperName>Net_Q1_Value__c</externalDeveloperName>
        <label>Net Q1 Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Q2_NY_Value_c__c</fullName>
        <externalDeveloperName>Net_Q2_NY_Value__c</externalDeveloperName>
        <label>Net Q2 NY Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Q2_Value_c__c</fullName>
        <externalDeveloperName>Net_Q2_Value__c</externalDeveloperName>
        <label>Net Q2 Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Q3_Value_c__c</fullName>
        <externalDeveloperName>Net_Q3_Value__c</externalDeveloperName>
        <label>Net Q3 Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Practice_Area_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>New_Practice_Area__c</externalDeveloperName>
        <label>New Practice Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Service_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>New_Service__c</externalDeveloperName>
        <label>New Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextQuarterAmount_c__c</fullName>
        <externalDeveloperName>NextQuarterAmount__c</externalDeveloperName>
        <label>Next Quarter Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NextStep__c</fullName>
        <externalDeveloperName>NextStep</externalDeveloperName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Countries_in_Scope_c__c</fullName>
        <externalDeveloperName>No_Of_Countries_in_Scope__c</externalDeveloperName>
        <label>No. Of Countries in Scope</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NotificationSheet_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>NotificationSheet_c__c</externalDeveloperName>
        <label>NotificationSheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_line_items_c__c</fullName>
        <externalDeveloperName>Number_of_line_items__c</externalDeveloperName>
        <label>Number of line items</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLI_Json_Data_c__c</fullName>
        <externalDeveloperName>OLI_Json_Data__c</externalDeveloperName>
        <label>OLI Json Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offering_Segment_Flag_National_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Offering_Segment_Flag_National__c</externalDeveloperName>
        <label>Offering Segment Flag National</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offering_Segment_Flag_Subnational_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Offering_Segment_Flag_Subnational__c</externalDeveloperName>
        <label>Offering Segment Flag Subnational</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offering_Segment_c__c</fullName>
        <externalDeveloperName>Offering_Segment__c</externalDeveloperName>
        <label>Offering Segment [deprecated]</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offering_type_c__c</fullName>
        <externalDeveloperName>Offering_type__c</externalDeveloperName>
        <label>Offering type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFA</fullName>
                </value>
                <value>
                    <fullName>CES</fullName>
                </value>
                <value>
                    <fullName>Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare Value Solutions</fullName>
                </value>
                <value>
                    <fullName>Management Consulting</fullName>
                </value>
                <value>
                    <fullName>MIDAS and Pricing Insights</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Non Pharma and Barter</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Real World Evidence Solutions</fullName>
                </value>
                <value>
                    <fullName>Subnational</fullName>
                </value>
                <value>
                    <fullName>Syndicated Analytics</fullName>
                </value>
                <value>
                    <fullName>Syndicated BI Tools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OppPlanException_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>OppPlanException__c</externalDeveloperName>
        <label>OppPlanException</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>